--- a/project/accounts/templates/accounts/mypage.html
+++ b/project/accounts/templates/accounts/mypage.html
@@ -109,10 +109,11 @@
                                     NO RACISM, NO BULLYING, NO THREATENING!!
                                 </h4>
                             </div>
-                            <button class="body-component__button"
-                                    onclick="location.href='{% url 'core:accounts:guideline' url_name %}'">
-                              READ ALL
-                            </button>
+                            <a class="body-component__button body-component__a"
+                               href="{% url 'core:accounts:guideline' url_name %}"
+                               target="_blank">
+                                READ ALL
+                            </a>
                         </div>
                         <div class="section__body__component">
                             <div class="body-component__content">
@@ -123,10 +124,11 @@
                                     About user privacy, message privacy and security
                                 </h4>
                             </div>
-                            <button class="body-component__button"
-                                    onclick="location.href='{% url 'core:accounts:policy' url_name %}'">
-                              READ ALL
-                            </button>
+                            <a class="body-component__button body-component__a"
+                               href="{% url 'core:accounts:policy' url_name %}"
+                               target="_blank">
+                                READ ALL
+                            </a>
                         </div>
                         <div class="section__body__component">
                             <div class="body-component__content">
