--- a/project/accounts/static/accounts/css/mypage_mobile.css
+++ b/project/accounts/static/accounts/css/mypage_mobile.css
@@ -1,120 +1,128 @@
 .pc__header {
-    display:none;
+  display: none;
 }
 
 .flex-container {
-    align-items: center;
+  align-items: center;
 }
 
 .mypage-header {
-    font-size: 2.5rem;
+  font-size: 2.5rem;
 }
 
 .mypage-wrapper {
-    height: 100%;
+  height: 100%;
 }
 
 .mypage__my-profile {
-    display: flex;
-    justify-content: center;
-    background-color: #F8F7F6;
-    margin: 0.5rem 0;
-    padding: 0.5rem 0;
+  display: flex;
+  justify-content: center;
+  background-color: #F8F7F6;
+  margin: 0.5rem 0;
+  padding: 0.5rem 0;
 }
 
 .profile-wrapper {
-    display: flex;
-    justify-content: center;
-    width: 15rem;
+  display: flex;
+  justify-content: center;
+  width: 15rem;
 }
 
 .user-profile {
-    margin: 0 1.25rem;
+  margin: 0 1.25rem;
 }
 
 .profile-info {
-    margin: 0.25rem 0;
-    font-weight: 100;
+  margin: 0.25rem 0;
+  font-weight: 100;
 }
 
 .profile-info__username {
-    font-weight: 900;
+  font-weight: 900;
 }
 
 .user-profile-info {
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    justify-content: space-between;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .mypage-section {
-    width: 100%;
+  width: 100%;
 }
 
 .section__header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    font-weight: 900;
-    font-size: 1.3rem;
-    background-color: var(--main-color);
-    width:100%;
-    height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-weight: 900;
+  font-size: 1.3rem;
+  background-color: var(--main-color);
+  width: 100%;
+  height: 2rem;
 }
 
 .section__body__component {
-    width: 100%;
-    height: 3.8rem;
-    margin: 0.4rem 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #F8F7F6;
-    padding: 0.25rem 1rem;
+  width: 100%;
+  height: 3.8rem;
+  margin: 0.4rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #F8F7F6;
+  padding: 0.25rem 1rem;
 }
 
 .body-component__content {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .content__header {
-    font-size: 1rem;
-    font-weight: 700;
+  font-size: 1rem;
+  font-weight: 700;
 }
 
 .content__desc {
-    font-size: 0.7rem;
-    font-weight: 400;
+  font-size: 0.7rem;
+  font-weight: 400;
 }
 
 .body-component__button {
-    height: 80%;
-    width: 8.25rem;
-    background-color: #D2D2D2;
-    border-radius: var(--border-radius);
-    color: #fff;
-    font-size: 1rem;
-    border:none;
-    cursor: pointer;
+  height: 80%;
+  width: 8.25rem;
+  background-color: #D2D2D2;
+  border-radius: var(--border-radius);
+  color: #fff;
+  font-size: 1rem;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.body-component__a {
+  text-decoration: none;
+  font-family: Arial;
 }
 
 .mypage__mobile__header {
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    height: 3rem;
-    background-color: #4fbcbd;
-    font-size: 1.5rem;
-    color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 3rem;
+  background-color: #4fbcbd;
+  font-size: 1.5rem;
+  color: white;
 }
 
 #back {
-    position: absolute;
-    top: 0.8rem;
-    left: 1rem;
+  position: absolute;
+  top: 0.8rem;
+  left: 1rem;
 }
