--- a/project/accounts/templates/accounts/signup.html
+++ b/project/accounts/templates/accounts/signup.html
@@ -12,7 +12,7 @@
                 <form method="post" action="" class="accounts__form-tag">
                     {% csrf_token %}
                     <div class="accounts__form__box accounts__login-info">
-                        <span id="accounts__login-title-span"class="info__title">Enter login information</span>
+                        <span id="accounts__login-title-span" class="info__title">Enter login information</span>
                         {{ form.username }}
                         {{ form.password1 }}
                         {{ form.password2 }}
@@ -53,9 +53,11 @@
                     </div>
                     <div class="accounts__form__box terms-info-and-button">
                         <p class="terms-info">
-                            By clicking submit, you agree to our <a href="#" class="signup__terms-info-link">Terms</a>
-                            and that you have read our <a href="#" class="signup__terms-info-link">Privacy Policy</a>
-                            and <a href="#" class="signup__terms-info-link">Content Policy</a>
+                            By clicking submit, you agree to our
+                            <a href="{% url 'core:accounts:policy' univ.url_name %}" target="_blank" class="signup__terms-info-link">Terms</a>
+                            and that you have read our
+                            <a href="{% url 'core:accounts:policy' univ.url_name %}" target="_blank" class="signup__terms-info-link">Privacy Policy</a>
+                            and <a href="{% url 'core:accounts:guideline' univ.url_name %}" target="_blank" class="signup__terms-info-link">Content Policy</a>.
                         </p>
                         <button class="signup__submit" type="submit">Next</button>
                     </div>
