--- a/project/accounts/templates/registration/login.html
+++ b/project/accounts/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-{% block css %}    
+{% block css %}
     <link rel="stylesheet" media="(max-width:767px)" href="{% static "registration/css/login_mobile.css" %}" type="text/css">
     <link rel="stylesheet" media="(min-width:768px)" href="{% static "registration/css/main.css" %}">
     <link rel="stylesheet" media="(min-width:768px)" href="{% static "accounts/css/modal.css" %}">
@@ -27,6 +27,20 @@
                     </form>
                     <div class="accounts__newbiebox">
                         <button class="user-info__button newbie-button" onclick="signupModalOpen()">New to MY CAMPUS?</button>
+                    </div>
+                    <div class="policy__button">
+                        Before you sign up for My Campus, please see our
+                        <a href="{% url 'core:accounts:policy' univ.url_name %}"
+                           target="_blank"
+                           class="user-info__a">
+                            Privacy & Legal Policy
+                        </a>
+                        and
+                        <a href="{% url 'core:accounts:guideline' univ.url_name %}"
+                           target="_blank"
+                           class="user-info__a">
+                            Content Policy
+                        </a>.
                     </div>
                 </div>
             </div>
