link tag error fix

--- a/project/templates/400.html
+++ b/project/templates/400.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <link rel="stylesheet" href="href="{% static "/css/error.css" %}" type="text/css">
+  <link rel="stylesheet" href="{% static "/css/error.css" %}" type="text/css">
 </head>
 <body>
   <p class="error-number">400</p>
