--- a/project/templates/404.html
+++ b/project/templates/404.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <title>MY CAMPUS 404</title>
-  <link rel="stylesheet" href="href="{% static "/css/error.css" %}" type="text/css">
+  <link rel="stylesheet" href="{% static "/css/error.css" %}" type="text/css">
 </head>
 <body>
   <!-- <img src="{% static "/svg/box-logo.svg" %}"> -->
