--- a/project/templates/400.html
+++ b/project/templates/400.html
@@ -4,10 +4,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>MY CAMPUS</title>
   <link rel="stylesheet" href="{% static "/css/error.css" %}" type="text/css">
 </head>
 <body>
-  <p class="error-number">400</p>
-  <p class="error-message">Page Not Found</p></body>
+  {% if user.is_authenticated %}
+    <a href="{% url 'core:board:main_board' user.univ.url_name %}">
+      <img src="{% static "images/logo2.png" %}" class="error-logo">
+    </a>
+  {% else %}
+    <a href="{% url 'main' %}">
+      <img src="{% static "images/logo2.png" %}" class="error-logo">
+    </a>
+  {% endif %}
+  <div class="error-number">400</div>
+  <div class="error-message">Page Not Found</div>
+</body>
 </html>
