--- a/project/templates/400.html
+++ b/project/templates/400.html
@@ -18,6 +18,6 @@
     </a>
   {% endif %}
   <div class="error-number">400</div>
-  <div class="error-message">Page Not Found</div>
+  <div class="error-message">Bad Request</div>
 </body>
 </html>
